File uploads and pdf viewer in working state still requiring a few changes

--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "coupling-graph": "npx madge --extensions js,jsx,ts,tsx,css,md,mdx ./ --exclude '.next|tailwind.config.js|reset.d.ts|prettier.config.js|postcss.config.js|playwright.config.ts|next.config.js|next-env.d.ts|instrumentation.ts|e2e/|README.md|.storybook/|.eslintrc.js' --image graph.svg"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@google-cloud/documentai": "^8.10.0",
+    "@mui/material": "^6.1.2",
     "@next/bundle-analyzer": "^14.2.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -46,13 +50,25 @@
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^13.0.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/react-pdf": "5.7.4",
     "@vercel/otel": "^1.8.3",
+    "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "file-loader": "^6.2.0",
     "lodash": "^4.17.21",
+    "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.2.3",
+    "next-auth": "^4.24.8",
     "next-compose-plugins": "^2.2.1",
+    "next-connect": "^1.0.0",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.7.76",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "6.2.2",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
@@ -79,8 +95,9 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.10",
-    "@types/node": "^20.12.13",
+    "@types/node": "^22.7.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
